lastfm: Remove unneeded g_strdup

It's not assigned to any variable and causes a leak:

==30698== 5 bytes in 1 blocks are definitely lost in loss record 145 of 18,389
==30698==    at 0x4A06C50: malloc (in /usr/lib64/valgrind/vgpreload_memcheck-amd64-linux.so)
==30698==    by 0x8D780AC: g_malloc (gmem.c:97)
==30698==    by 0x8D783C5: g_malloc_n (gmem.c:336)
==30698==    by 0x8D93B9A: g_strdup (gstrfuncs.c:356)
==30698==    by 0x4C9C629: check_cb (goalastfmprovider.c:525)
==30698==    by 0x4F16A4E: _call_message_completed_cb (rest-proxy-call.c:698)
==30698==    by 0x51A875D: soup_session_process_queue_item (soup-session.c:2106)
==30698==    by 0x51A88D7: async_run_queue (soup-session.c:2145)
==30698==    by 0x51A89FE: idle_run_queue (soup-session.c:2179)
==30698==    by 0x8D72470: g_idle_dispatch (gmain.c:5397)
==30698==    by 0x8D6FAB8: g_main_dispatch (gmain.c:3122)
==30698==    by 0x8D708FC: g_main_context_dispatch (gmain.c:3737)

https://bugzilla.gnome.org/show_bug.cgi?id=755315